# kidney

./: .gitignore  README.md  pyproject.toml  quick analysis.ipynb  run_analysis.sh
data/prepared/: bfi.csv  bfi_empa.csv  bfi_vehicle.csv  biochem.csv  blood_glucose.csv  blood_pressure.csv  bp_empa.csv  bp_vehicle.csv  excretion_glucose.csv  excretion_glucose_empa_minus_vehicle.csv  excretion_glucose_log_empa_minus_log_vehicle.csv  excretion_glucose_vehicle.csv  excretion_na.csv  excretion_na_empa_minus_vehicle.csv  excretion_na_log_empa_minus_log_vehicle.csv  excretion_na_vehicle.csv  frequency.csv  plasma_na.csv  plasma_na_empa_minus_vehicle.csv  plasma_na_log_empa_minus_log_vehicle.csv  plasma_na_vehicle.csv  power.csv  urine_flow.csv  urine_flow_empa_minus_vehicle.csv  urine_flow_log_empa_minus_log_vehicle.csv  urine_flow_vehicle.csv
data/raw/: biochem_data_change_empa_vehicle.csv  biochem_data_vehicle.csv  frequency.csv  meanBFI_rec1Vehicle.csv  meanBFI_rec2Empa.csv  meanBP_rec1Vehicle.csv  meanBP_rec2Empa.csv  power.csv  vein_glucose.csv
notebooks/: analyse fits-BloodGlucose.ipynb  analyse fits-ExcretionGlucose.ipynb  analyse fits-ExcretionNa.ipynb  analyse fits-PlasmaNa.ipynb  analyse fits-UrineFlow.ipynb  analyse fits-bfi.ipynb  analyse fits-bp.ipynb  analyse fits-freq.ipynb  analyse fits-pow.ipynb  analyse fits.ipynb  biochem.ipynb  blood glucose.ipynb
results/: readme.md
scripts/: prepare_data.py  run_mcmc.py
src/kidney/: __init__.py  data_preparation.py  model_configuration.py  paths.py  plotting.py  sign_probs.py
