[project]
name = "kidney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Teddy Groves", email = "groves.teddy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.17.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]

[project.scripts]
kidney = "kidney:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
